add MworkBaseActivity and MworkBaseNavActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,11 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize|stateHidden" >a
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+a
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -20,6 +22,15 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".MworkBaseActivity"
+            android:label="@string/title_activity_mwork_base" >
+        </activity>
+        <activity
+            android:name=".MworkBaseNavActivity"
+            android:label="@string/title_activity_mwork_base_nav" >
+        </activity>
     </application>
     <!-- To access Google+ APIs: -->
     <uses-permission android:name="android.permission.INTERNET" />
