--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,8 @@
             android:label="@string/title_activity_mwork_base_nav" >
         </activity>
         <activity
-            android:name=".TaskSelectionActivity"
-            android:label="@string/title_activity_task_menu" >
+            android:name=".HomeActivity"
+            android:label="@string/title_activity_home" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
