--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:targetSdkVersion="15" />
 
     <application
+        android:name="com.siliconvalleyinsight.mwork.singletons.MWorkApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
