--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.siliconvalleyinsight.mwork" >
 
+    <uses-sdk
+        android:minSdkVersion="13"
+        android:targetSdkVersion="15" />
+
     <!-- To access Google+ APIs: -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -18,12 +22,17 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
-    <uses-sdk
-        android:minSdkVersion="13"
-        android:targetSdkVersion="15" />
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_CALL_LOG" />
 
     <application
-        android:name=".singletons.MWorkApp"
+        android:name="com.siliconvalleyinsight.mwork.singletons.MWorkApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -33,7 +42,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".activities.HomeActivity"
+            android:name="com.siliconvalleyinsight.mwork.activities.HomeActivity"
             android:label="@string/title_activity_home" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,17 +51,85 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.LoginActivity"
+            android:name="com.siliconvalleyinsight.mwork.activities.LoginActivity"
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         <activity
-            android:name=".activities.OneHandTaskActivity"
+            android:name="com.siliconvalleyinsight.mwork.activities.OneHandTaskActivity"
             android:label="@string/title_activity_one_hand_task" >
         </activity>
         <activity
-            android:name=".activities.CashOutActivity"
+            android:name="com.siliconvalleyinsight.mwork.activities.CashOutActivity"
             android:label="@string/title_activity_cash_out" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.AgeSelectionActivity"
+            android:label="@string/title_activity_age_selection" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.BetterCashOutActivity"
+            android:label="@string/title_activity_better_cash_out" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.CashoutBankActivity"
+            android:label="@string/title_activity_cashout_bank" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.CashoutPaypalActivity"
+            android:label="@string/title_activity_cashout_paypal" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.CashoutVenmoActivity"
+            android:label="@string/title_activity_cashout_venmo" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.LanguageSelectionActivity"
+            android:label="@string/title_activity_language_selection" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.LocationEntryActivity"
+            android:label="@string/title_activity_location_entry" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.NameEntryActivity"
+            android:label="@string/title_activity_name_entry" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.OneHandedTaskActivity"
+            android:label="@string/title_activity_one_handed_task" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.SecludedTaskActivity"
+            android:label="@string/title_activity_secluded_task" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.SecludedTaskEndActivity"
+            android:label="@string/title_activity_secluded_task_end" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.SecludedTaskMiddle2Activity"
+            android:label="@string/title_activity_secluded_task_middle2" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.SecludedTaskMiddle1Activity"
+            android:label="@string/title_activity_secluded_task_middle1" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.SecludedTaskStartActivity"
+            android:label="@string/title_activity_secluded_task_start" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.SetupAccountActivity"
+            android:label="@string/title_activity_setup_account" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.TwoHandedActivity"
+            android:label="@string/title_activity_two_handed" >
+        </activity>
+        <activity
+            android:name="com.siliconvalleyinsight.mwork.activities.TwoHandedTaskActivity"
+            android:label="@string/title_activity_two_handed_task" >
         </activity>
     </application>
 
